# BE-emis-agent

./: .env  .env.example  README.md  knowledge.md  main.py  my_mcp_server.py  pyproject.toml  streaming_api.py
docs/: API_REFERENCE.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_GUIDE.md  PROJECT_OVERVIEW.md  SETUP_GUIDE.md  langgraph_parallel_tools.md
